# FI-EDL

./: .gitignore  CODE_RELEASE_README.md  EXPERIMENTS.md  README.ko.md  README.md  pyproject.toml  run.py
configs/: config.yaml
configs/backbone/: convnet.yaml  resnet18.yaml  vgg16.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  mnist.yaml
configs/experiment/: daedl.yaml  edl_l0001.yaml  edl_l01.yaml  (+6 more)
paper/: PAPER_ROADMAP.md  README.md  STATUS_2026-05-29.md  TODO.md  cover_letter_draft.md  main.tex  refs.bib  related_work_notes.md  section_7_discussion_outline.md  section_8_conclusion_outline.md  suggested_reviewers.md
reference papers/: R-EDL_ICLR2024_reference_summary.md  Re-EDL_arXiv2024_reference_summary.md  Shen2024_Mirage_NeurIPS2024_reference_summary.md  feedback.md
scripts/: _loader.py  aggregate_cifar100.py  aggregate_cifar100_extended.py  aggregate_dtd_gap3.py  aggregate_gtsrb.py  aggregate_resnet_gap1.py  build_all_methods_tables.py  build_redl_comparison.py  build_table_conf.py  build_table_ece.py  build_table_ood.py  check_paper_consistency.py  compute_brier.py  compute_cost_analysis.py  convert_kmnist_npz.py  eval_cifar100_tinyimagenet.sh  eval_cifar10_extended_ood.sh  eval_cifar10c.py  eval_gap3_dtd.sh  fill_report_md.py  plot_reliability.py  plot_training_dynamics.py  reeval_fiedl_scores.sh  reproduce_paper.sh  run_all_baselines.sh  run_cifar100.sh  run_fiedl_masked_sweep.sh  run_fiedl_sn.sh  run_fiedl_sweep.sh  run_resnet_cifar10.sh
src/: eval.py  train.py
tests/: test_config_smoke.py  test_ood_metric_smoke.py  test_registry_smoke.py
(+368 files in other folders)
